v0.53.10 (2024-02-22)

- Fix pgsql-load-db to not start multiple processes for single partition data
  loading, which weren't doing anything
- Parallelize some of the plotting in the generate-report and pgsql-report
  scripts
- psql: run TRUNCATE and COPY within a transaction if data is not partitioned
- Use linuxdeploy to create AppImage
- Build gnuplot explicitly disabling unnecessary options for AppImage
- Now only installing psql into AppImage
- Install touchstone-tools v0.7.3 into AppImage
- Remove `activate` script in favor of just executing AppRun
- Fix pgsql-load-stored-procs to install from AppImage by default when run from
  the AppImage
- PostgreSQL load scripts are now BDR aware

v0.53.9 (2024-02-07)

- Fix pgsql-create-db logic for checking if the database already exists
v0.53.8 (2024-01-08)

- Fix test for touchstone tools in "run" script

v0.53.7 (2023-09-29)

- Remove dated psql scripts
- psql: Do not attempt to create database if it already exists, so that errors
  due to a lack of permissions to create database can be effectively trapped
- Add --tablespaces option to dbt2-build script to specify where tablespace
  devices are mounted or symlinked
- Fix handling of tablespace flag for creating tables when using
  dbt2-pgsql-build-db

v0.53.6 (2023-09-04)

- driver3 now processes -L flag to limit number of connections by limited the
  number of processes forked
- pgsql-build-db: fix execution of pgsql-load-db and pgsql-create-index so
  that parameters are handled correctly when the -l argument is not used

v0.53.5 (2023-08-25)

- Handle host names greater than 31 characters, now up to 255.
- Fix detection of touchstone tools for collecting database stats

v0.53.4 (2023-07-11)

- Fix version flag usage with AppImages
- Add OpenSSH to AppImage
- Fix dbt2-run --client-connections= command line handling
- Add ssh to the AppImage

v0.53.3 (2023-06-29)

- Update touchstone tool commands to use "ts", enabling use of ts-tools