@@ -10,6 +10,9 @@
 #ifdef HAVE_CONFIG_H
 #include <config.h>
 #endif
+#include <errno.h>
+#include <string.h>
+#include <unistd.h>
 
 #include "db.h"
 #include "logging.h"
@@ -57,10 +60,30 @@ const char s_dist[10][11] = {
 
 int connect_to_db(struct db_context_t *dbc) {
 	int rc;
+	struct timespec ts0, rem0;
+	int retry_count = 0;
 
-	rc = (*dbc->connect)(dbc);
-	if (rc != OK) {
-		return ERROR;
+	while (1) {
+		time_t tt = time(NULL);
+		if (dbc->stop_time != 0 && tt > dbc->stop_time) return ERROR;
+		++retry_count;
+		rc = (*dbc->connect)(dbc);
+		if (rc == OK) {
+			LOG_ERROR_MESSAGE("%d retries to reconnect", retry_count);
+			break;
+		}
+		ts0.tv_sec = dbc->ts_retry.tv_sec;
+		ts0.tv_nsec = dbc->ts_retry.tv_nsec;
+		while (nanosleep(&ts0, &rem0) == -1) {
+			extern int errno;
+			if (errno == EINTR) {
+				memcpy(&ts0, &rem0, sizeof(struct timespec));
+			} else {
+				LOG_ERROR_MESSAGE(
+						"sleep time invalid %ld s %ld ns",
+						ts0.tv_sec, ts0.tv_nsec);
+			}
+		}
 	}
 
 	return OK;
@@ -83,58 +106,100 @@ int process_transaction(int transaction, struct db_context_t *dbc,
 	int rc;
 	int i;
 	int status;
+	int txn_count = 0;
+	struct timespec ts0, rem0;
 
-	switch (transaction) {
-	case INTEGRITY:
-		rc = (*dbc->execute_integrity)(dbc, &td->integrity);
-		break;
-	case DELIVERY:
-		rc = (*dbc->execute_delivery)(dbc, &td->delivery);
-		break;
-	case NEW_ORDER:
-		td->new_order.o_all_local = 1;
-		for (i = 0; i < td->new_order.o_ol_cnt; i++) {
-			if (td->new_order.order_line[i].ol_supply_w_id !=
-					td->new_order.w_id) {
-				td->new_order.o_all_local = 0;
+	while (txn_count++ < 1) {
+		int rc2;
+		int retry_count = 0;
+
+		switch (transaction) {
+		case INTEGRITY:
+			rc = (*dbc->execute_integrity)(dbc, &td->integrity);
+			break;
+		case DELIVERY:
+			rc = (*dbc->execute_delivery)(dbc, &td->delivery);
+			break;
+		case NEW_ORDER:
+			td->new_order.o_all_local = 1;
+			for (i = 0; i < td->new_order.o_ol_cnt; i++) {
+				if (td->new_order.order_line[i].ol_supply_w_id !=
+						td->new_order.w_id) {
+					td->new_order.o_all_local = 0;
+					break;
+				}
+			}
+			rc = (*dbc->execute_new_order)(dbc, &td->new_order);
+			if (rc != ERROR && td->new_order.rollback == 0) {
+				/*
+				 * Calculate the adjusted total_amount here to work
+				 * around an issue with SAP DB stored procedures that
+				 * does not allow any statements to execute after a
+				 * SUBTRANS ROLLBACK without throwing an error.
+				 */
+				td->new_order.total_amount =
+					td->new_order.total_amount *
+					(1 - td->new_order.c_discount) *
+					(1 + td->new_order.w_tax + td->new_order.d_tax);
+			} else {
+				rc = ERROR;
+			}
+			break;
+		case ORDER_STATUS:
+			rc = (*dbc->execute_order_status)(dbc, &td->order_status);
+			break;
+		case PAYMENT:
+			rc = (*dbc->execute_payment)(dbc, &td->payment);
+			break;
+		case STOCK_LEVEL:
+			rc = (*dbc->execute_stock_level)(dbc, &td->stock_level);
+			break;
+		default:
+			LOG_ERROR_MESSAGE("unknown transaction type %d", transaction);
+			return ERROR;
+		}
+
+		/* Commit or rollback the transaction on expected OK or ERROR. */
+		if (rc == OK) {
+			status = (*dbc->commit_transaction)(dbc);
+			if (status == OK) break;
+		} else if (rc == ERROR) {
+			status = (*dbc->rollback_transaction)(dbc);
+			if (status == STATUS_ROLLBACK) break;
+		}
+
+		/* Reconnect to the database on unexpected return codes. */
+		LOG_ERROR_MESSAGE("cleaning up connection before retry");
+		disconnect_from_db(dbc);
+		/* Retry until the calculated stop time. */
+		while (1) {
+			time_t tt = time(NULL);
+			if (dbc->stop_time == 0 || tt > dbc->stop_time) return ERROR;
+
+			++retry_count;
+			LOG_ERROR_MESSAGE("retrying database connection");
+			rc2 = connect_to_db(dbc);
+			if (rc2 == OK) {
+				LOG_ERROR_MESSAGE("%d retries to reconnect", retry_count);
 				break;
 			}
+			ts0.tv_sec = dbc->ts_retry.tv_sec;
+			ts0.tv_nsec = dbc->ts_retry.tv_nsec;
+			while (nanosleep(&ts0, &rem0) == -1) {
+				extern int errno;
+				if (errno == EINTR) {
+					memcpy(&ts0, &rem0, sizeof(struct timespec));
+				} else {
+					LOG_ERROR_MESSAGE(
+							"sleep time invalid %ld s %ld ns",
+							ts0.tv_sec, ts0.tv_nsec);
+				}
+			}
 		}
-		rc = (*dbc->execute_new_order)(dbc, &td->new_order);
-		if (rc != ERROR && td->new_order.rollback == 0) {
-			/*
-			 * Calculate the adjusted total_amount here to work
-			 * around an issue with SAP DB stored procedures that
-			 * does not allow any statements to execute after a
-			 * SUBTRANS ROLLBACK without throwing an error.
-	 		 */
-			td->new_order.total_amount =
-				td->new_order.total_amount *
-				(1 - td->new_order.c_discount) *
-				(1 + td->new_order.w_tax + td->new_order.d_tax);
-		} else {
-			rc = ERROR;
+		if (rc2 != OK) {
+			LOG_ERROR_MESSAGE("unable to reconnect to database");
+			/* Don't know what to do...  Keep looping until better idea... */
 		}
-		break;
-	case ORDER_STATUS:
-		rc = (*dbc->execute_order_status)(dbc, &td->order_status);
-		break;
-	case PAYMENT:
-		rc = (*dbc->execute_payment)(dbc, &td->payment);
-		break;
-	case STOCK_LEVEL:
-		rc = (*dbc->execute_stock_level)(dbc, &td->stock_level);
-		break;
-	default:
-		LOG_ERROR_MESSAGE("unknown transaction type %d", transaction);
-		return ERROR;
-	}
-
-	/* Commit or rollback the transaction. */
-	if (rc == OK) {
-		status = (*dbc->commit_transaction)(dbc);
-	} else {
-		status = (*dbc->rollback_transaction)(dbc);
 	}
 
 	return status;
