@@ -63,6 +63,12 @@ int execute_new_order_libpq(struct db_context_t *dbc, struct new_order_t *data)
 	res = PQexec(dbc->library.libpq.conn, "BEGIN");
 	if (!res || PQresultStatus(res) != PGRES_COMMAND_OK) {
 		LOG_ERROR_MESSAGE("%s", PQerrorMessage(dbc->library.libpq.conn));
+		if (PQresultStatus(res) == PGRES_FATAL_ERROR &&
+			strcmp("no connection to the server\n",
+				   PQerrorMessage(dbc->library.libpq.conn)) == 0) {
+			PQclear(res);
+			return RECONNECT;
+		}
 		PQclear(res);
 		return ERROR;
 	}
@@ -118,8 +124,14 @@ int execute_new_order_libpq(struct db_context_t *dbc, struct new_order_t *data)
 	res = PQexecParams(dbc->library.libpq.conn, UDF_NEW_ORDER, 50, NULL,
 			paramValues, paramLengths, paramFormats, 1);
 	if (PQresultStatus(res) != PGRES_TUPLES_OK) {
-		data->rollback = 0;
 		LOG_ERROR_MESSAGE("NO %s", PQerrorMessage(dbc->library.libpq.conn));
+		if (PQresultStatus(res) == PGRES_FATAL_ERROR &&
+			strcmp("no connection to the server\n",
+				   PQerrorMessage(dbc->library.libpq.conn)) == 0) {
+			PQclear(res);
+			return RECONNECT;
+		}
+		data->rollback = 0;
 		PQclear(res);
 		return ERROR;
 	}
