@@ -55,6 +55,12 @@ int execute_order_status_libpq(struct db_context_t *dbc, struct order_status_t *
 	res = PQexec(dbc->library.libpq.conn, "BEGIN");
 	if (!res || PQresultStatus(res) != PGRES_COMMAND_OK) {
 		LOG_ERROR_MESSAGE("%s", PQerrorMessage(dbc->library.libpq.conn));
+		if (PQresultStatus(res) == PGRES_FATAL_ERROR &&
+			strcmp("no connection to the server\n",
+				   PQerrorMessage(dbc->library.libpq.conn)) == 0) {
+			PQclear(res);
+			return RECONNECT;
+		}
 		PQclear(res);
 		return ERROR;
 	}
@@ -64,6 +70,12 @@ int execute_order_status_libpq(struct db_context_t *dbc, struct order_status_t *
 			paramValues, paramLengths, paramFormats, 1);
 	if (!res || PQresultStatus(res) != PGRES_TUPLES_OK) {
 		LOG_ERROR_MESSAGE("OS %s", PQerrorMessage(dbc->library.libpq.conn));
+		if (PQresultStatus(res) == PGRES_FATAL_ERROR &&
+			strcmp("no connection to the server\n",
+				   PQerrorMessage(dbc->library.libpq.conn)) == 0) {
+			PQclear(res);
+			return RECONNECT;
+		}
 		PQclear(res);
 		return ERROR;
 	}
