@@ -6,6 +6,7 @@
  */
 
 #include <stdio.h>
+#include <string.h>
 
 #include "common.h"
 #include "logging.h"
@@ -45,6 +46,12 @@ int execute_stock_level_libpq(struct db_context_t *dbc, struct stock_level_t *da
 	res = PQexec(dbc->library.libpq.conn, "BEGIN");
 	if (!res || PQresultStatus(res) != PGRES_COMMAND_OK) {
 		LOG_ERROR_MESSAGE("%s", PQerrorMessage(dbc->library.libpq.conn));
+		if (PQresultStatus(res) == PGRES_FATAL_ERROR &&
+			strcmp("no connection to the server\n",
+				   PQerrorMessage(dbc->library.libpq.conn)) == 0) {
+			PQclear(res);
+			return RECONNECT;
+		}
 		PQclear(res);
 		return ERROR;
 	}
@@ -54,6 +61,12 @@ int execute_stock_level_libpq(struct db_context_t *dbc, struct stock_level_t *da
 			paramValues, paramLengths, paramFormats, 1);
 	if (!res || PQresultStatus(res) != PGRES_TUPLES_OK) {
 		LOG_ERROR_MESSAGE("SL %s", PQerrorMessage(dbc->library.libpq.conn));
+		if (PQresultStatus(res) == PGRES_FATAL_ERROR &&
+			strcmp("no connection to the server\n",
+				   PQerrorMessage(dbc->library.libpq.conn)) == 0) {
+			PQclear(res);
+			return RECONNECT;
+		}
 		PQclear(res);
 		return ERROR;
 	}
